old_files/miscellaneous/AoI/plugins/MetaCAD/src/org/reprap/artofillusion/metacad/parser/MetaCADParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MetaCADParser.java */
package org.reprap.artofillusion.metacad.parser;


import org.reprap.artofillusion.metacad.ParsedTree;
import org.reprap.artofillusion.metacad.language.*;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.List;


/** Simple brace matcher. */
public class MetaCADParser/*@bgen(jjtree)*/implements MetaCADParserTreeConstants, MetaCADParserConstants {/*@bgen(jjtree)*/
  protected static JJTMetaCADParserState jjtree = new JJTMetaCADParserState();protected static MetaCADParser theParser = null;
  public static MetaCADParser getSingleton(String txt)
  {
        if (theParser== null)
        {
                theParser=new MetaCADParser(new StringReader(txt));
        }
        else
        {
                theParser.ReInit(new StringReader(txt));
        }
        return theParser;
  }

  public static ParsedTree parseTree(String txt) throws ParseException {
        MetaCADParser parser = getSingleton(txt);
        return parser.ParsedTree();
  }

  public static List<ParsedStatement> parseParameters(String txt) throws ParseException {
    try
        {
                MetaCADParser parser = getSingleton(txt);
                return parser.ParsedStatementList();
        }
        catch (Throwable ex)
        {
                ParseException newEx = new ParseException(ex.getMessage() + " in:\u005cn" + txt);
                newEx.initCause(ex);
                throw newEx;
        }
  }

  public static String dumpTokens(SimpleNode node)
  {
        Token first = node.jjtGetFirstToken();
        Token last = node.jjtGetLastToken();

        String s=first.image;
        while (first != last)
        {
                first = first.next;
                s = s  + first.image;
        }
        return s;
  }

  static final public ParsedTree ParsedTree() throws ParseException {
 /*@bgen(jjtree) ParsedTree */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSEDTREE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));ParsedTree tree;
        List<ParsedTree> children=null;
    try {
      tree = FunctionCallList();
      if (jj_2_2(3)) {
        jj_consume_token(LBRACE);
        children = ParsedTreeList();
        jj_consume_token(RBRACE);
        if (jj_2_1(3)) {
          jj_consume_token(30);
        } else {
          ;
        }
      } else if (jj_2_3(3)) {
        jj_consume_token(30);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  jjtn000.jjtSetLastToken(getToken(0));
        if (children != null)
        {
                ParsedTree bottom = tree;
                while (bottom.children.size() != 0) { bottom = bottom.children.get(0); };
                bottom.children = children;
        }

        {if (true) return tree;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<ParsedTree> ParsedTreeList() throws ParseException {
 /*@bgen(jjtree) ParsedTreeList */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSEDTREELIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));List<ParsedTree> list = new ArrayList<ParsedTree>();
        ParsedTree current;
    try {
      label_1:
      while (true) {
        if (jj_2_4(3)) {
          ;
        } else {
          break label_1;
        }
        current = ParsedTree();
                                  list.add(current);
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return list;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ParsedTree FunctionCallList() throws ParseException {
 /*@bgen(jjtree) FunctionCallList */
        SimpleNode jjtn000 = new SimpleNode(JJTFUNCTIONCALLLIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));ParsedTree current = null;
        List<ParsedTree> trees =  new ArrayList<ParsedTree>();
    try {
      label_2:
      while (true) {
        current = FunctionCall();
                                   trees.add(current);
        if (jj_2_5(3)) {
          ;
        } else {
          break label_2;
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                for (int i = 0; i < trees.size()-1; i++)
                {
                        trees.get(i).children.add(trees.get(i+1));
                }
                {if (true) return trees.get(0);}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ParsedTree FunctionCall() throws ParseException {
 /*@bgen(jjtree) FunctionCall */
        SimpleNode jjtn000 = new SimpleNode(JJTFUNCTIONCALL);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));ParsedTree tree;
        Token name, nameToken;
        List <String> params = new ArrayList<String>();
    try {
      if (jj_2_13(3)) {
        name = jj_consume_token(IDENTIFIER);
        if (jj_2_7(3)) {
          jj_consume_token(LPAREN);
          if (jj_2_6(3)) {
            params = ParameterList();
          } else {
            ;
          }
          jj_consume_token(RPAREN);
        } else {
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                tree = new ParsedTree();
                tree.name = name.image;
                tree.parameters =  params;
                {if (true) return tree;}
      } else if (jj_2_14(3)) {
        if (jj_2_8(3)) {
          nameToken = jj_consume_token(PLUS);
        } else if (jj_2_9(3)) {
          nameToken = jj_consume_token(MINUS);
        } else if (jj_2_10(3)) {
          nameToken = jj_consume_token(DIVIDE);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        name = jj_consume_token(IDENTIFIER);
        if (jj_2_12(3)) {
          jj_consume_token(LPAREN);
          if (jj_2_11(3)) {
            params = ParameterList();
          } else {
            ;
          }
          jj_consume_token(RPAREN);
        } else {
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                String n = nameToken.image+name.image;
                tree = new ParsedTree();
                tree.name = n;
                tree.parameters =  params;
                {if (true) return tree;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<String> ParameterList() throws ParseException {
 /*@bgen(jjtree) ParameterList */
        SimpleNode jjtn000 = new SimpleNode(JJTPARAMETERLIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));List<String> expressions = new ArrayList<String>();
        String current;
    try {
      current = Expression();
                               expressions.add(current);
      label_3:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        current = Expression();
                                                                                      expressions.add(current);
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return expressions;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void JEPFunctionCall() throws ParseException {
 /*@bgen(jjtree) JEPFunctionCall */
  SimpleNode jjtn000 = new SimpleNode(JJTJEPFUNCTIONCALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IDENTIFIER);
      if (jj_2_17(3)) {
        jj_consume_token(LPAREN);
        if (jj_2_16(3)) {
          ParameterList();
        } else {
          ;
        }
        jj_consume_token(RPAREN);
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/** Brace counting production. */
  static final public void UnaryExpression() throws ParseException {
 /*@bgen(jjtree) UnaryExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTUNARYEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      if (jj_2_18(3)) {
        jj_consume_token(REAL_LITERAL);
      } else if (jj_2_19(3)) {
        JEPFunctionCall();
      } else if (jj_2_20(3)) {
        jj_consume_token(LPAREN);
        Expression();
        jj_consume_token(RPAREN);
      } else if (jj_2_21(3)) {
        jj_consume_token(MINUS);
        UnaryExpression();
      } else if (jj_2_22(3)) {
        jj_consume_token(STRING_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/** Brace counting production. */
  static final public String Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      UnaryExpression();
      label_4:
      while (true) {
        if (jj_2_23(3)) {
          ;
        } else {
          break label_4;
        }
        if (jj_2_24(3)) {
          jj_consume_token(PLUS);
        } else if (jj_2_25(3)) {
          jj_consume_token(MINUS);
        } else if (jj_2_26(3)) {
          jj_consume_token(DIVIDE);
        } else if (jj_2_27(3)) {
          jj_consume_token(ASSIGN);
        } else if (jj_2_28(3)) {
          jj_consume_token(LTE);
        } else if (jj_2_29(3)) {
          jj_consume_token(GTE);
        } else if (jj_2_30(3)) {
          jj_consume_token(EQUALS);
        } else if (jj_2_31(3)) {
          jj_consume_token(NEQUALS);
        } else if (jj_2_32(3)) {
          jj_consume_token(OTHERBINOP);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        UnaryExpression();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return dumpTokens(jjtn000);}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public VariableAssignment LocalVariableAssignment() throws ParseException {
 /*@bgen(jjtree) LocalVariableAssignment */
        SimpleNode jjtn000 = new SimpleNode(JJTLOCALVARIABLEASSIGNMENT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));String name;
        String formula;
        Token temp;
    try {
      temp = jj_consume_token(IDENTIFIER);
                          name=temp.image;
      jj_consume_token(ASSIGN);
      formula = Expression();
                {if (true) return new VariableAssignment(name, formula);}
      jj_consume_token(30);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public VariableAssignment VariableAssignment() throws ParseException {
 /*@bgen(jjtree) VariableAssignment */
        SimpleNode jjtn000 = new SimpleNode(JJTVARIABLEASSIGNMENT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));String name;
        String formula;
        Token temp;
    try {
      temp = jj_consume_token(IDENTIFIER);
                          name=temp.image;
      jj_consume_token(ASSIGN);
      formula = Expression();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return new VariableAssignment(name, formula);}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public MacroPrototype MacroPrototype() throws ParseException {
 /*@bgen(jjtree) MacroPrototype */
        SimpleNode jjtn000 = new SimpleNode(JJTMACROPROTOTYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token temp;
        String name;
        List<String> list = new ArrayList<String>();
        List<ParsedTree> children;
    try {
      temp = jj_consume_token(IDENTIFIER);
                          name=temp.image;
      jj_consume_token(LPAREN);
      if (jj_2_34(3)) {
        temp = jj_consume_token(IDENTIFIER);
                                       list.add(temp.image);
        label_5:
        while (true) {
          if (jj_2_33(3)) {
            ;
          } else {
            break label_5;
          }
          jj_consume_token(COMMA);
          temp = jj_consume_token(IDENTIFIER);
                                               list.add(temp.image);
        }
      } else {
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      children = ParsedTreeList();
      jj_consume_token(RBRACE);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return new MacroPrototype(name, list, children);}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<ParsedStatement> ParsedStatementList() throws ParseException {
 /*@bgen(jjtree) ParsedStatementList */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSEDSTATEMENTLIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));List <ParsedStatement> statements = new ArrayList();
        ParsedStatement temp;
    try {
      label_6:
      while (true) {
        if (jj_2_35(3)) {
          ;
        } else {
          break label_6;
        }
        if (jj_2_36(3)) {
          temp = MacroPrototype();
                                  statements.add(temp);
        } else if (jj_2_37(3)) {
          temp = VariableAssignment();
                                      statements.add(temp);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
                {if (true) return statements;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }
